--- a/src/index.html
+++ b/src/index.html
@@ -394,7 +394,7 @@
                 </li>
                 <li class="social-list__item list">
                   <a
-                    href="www.linkedin.com/in/cezara-alexandra"
+                    href="https://www.linkedin.com/in/cezara-alexandra"
                     target="blank"
                     class="social-list__link link"
                     aria-label="linkedin"
